# matxin-eng

./: Makefile.am  README  autogen.sh  configure.ac  get-dependencies.sh  matxin-eng.eng.dix  matxin-eng.eng.gnx  matxin-eng.generation.xml  matxin-eng.morph_gen_mur.xml  matxin-eng.pc.in  modes.xml
m4/: ax_java.m4
scripts/: download-corenlp.sh
stanford/: ChunkRule.java  Makefile.am  StanfordAnalyzer.java  get-dependencies.sh  matxin-stanford-header.sh
stanford/matxin/: ChunkRule.java  Makefile.am  StanfordAnalyzer.java
